# entomological-label-information-extraction

./: .dockerignore  .flake8  .gitattributes  .gitignore  .readthedocs.yaml  INSTALL.md  LICENSE  Makefile  README.md  README.rst  TECHNICAL_GUIDE.md  USER_GUIDE.md  environment.yml  launch.py  launch_gui.py  multi-label-docker-compose.yaml  pyproject.toml  run-pipeline.sh  single-label-docker-compose.yaml  test_ci_basic.py
.github/workflows/: ci.yml
.history/: README_20250723124011.rst  README_20250723124037.rst
.history/unit_tests/label_processing_tests/: label_detection_test_20250723123155.py  label_detection_test_20250723123845.py  label_detection_test_20250723123937.py
classes/: ms_classes.txt
docs/: .gitignore  ADVANCED_CONFIG.md  DOCKER_SETUP.md  Makefile  ROTATION_MODEL_SETUP.md  TECHNICAL_GUIDE.md  USER_GUIDE.md  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  license.rst  quickstart.rst  requirements.txt  troubleshooting.rst  user_guide.rst
docs/api/: label_evaluation.rst  label_postprocessing.rst  label_processing.rst  modules.rst  pipelines.rst  scripts.rst
examples/: process_single_label.py
interfaces/: launch_streamlit.py
label_evaluation/: accuracy_classifier.py  evaluate_text.py  improved_plotting.py  iou_scores.py  redundancy.py
label_postprocessing/: ocr_postprocessing.py
label_processing/: README_CONFIG.md  __init__.py  config.py  detect_empty_labels.py  label_detection.py  label_rotation.py  ocr_vision.py  tensorflow_classifier.py  text_recognition.py  utils.py
models/: checksums.sha256
models/classes/: hp_classes.txt  ms_classes.txt  nuri_classes.txt
models/label_classifier_hp/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/label_classifier_hp/variables/: variables.data-00000-of-00001  variables.index
models/label_classifier_identifier_not_identifier/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/label_classifier_identifier_not_identifier/variables/: variables.data-00000-of-00001  variables.index
models/label_classifier_multi_single/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/label_classifier_multi_single/variables/: variables.data-00000-of-00001  variables.index
pipelines/: Dockerfile  Dockerfile.full  HPC_QUICKSTART.md  README.md  base.dockerfile  classification.dockerfile  docker-compose.yml  elie.def  empty_labels.dockerfile  multi-label-docker-compose.yaml  postprocessing.dockerfile  rotation.dockerfile  segmentation.dockerfile  single-label-docker-compose.yaml  tesseract.dockerfile
pipelines/requirements/: classifier.txt  empty_labels.txt  postprocess.txt  rotation.txt  segmentation.txt  tesseract.txt
scripts/: health_check.py  run_full_pipeline.py  run_pipeline.py
scripts/docker/: start-multi-label-pipeline.sh  start-single-label-pipeline.sh  validate-docker-setup.sh
scripts/evaluation/: analysis_eval.py  classifiers_eval.py  cluster_eval.py  detection_eval.py  ocr_eval.py  redundancy.py  rotation_eval.py
scripts/postprocessing/: consolidate_results.py  process.py
scripts/processing/: analysis.py  classifiers.py  detection.py  rotation.py  tesseract.py  vision.py
scripts/troubleshooting/: test_model_loading.py
tools/: run_mli_pipeline.sh  run_sli_pipeline.sh  security_validator.py  watch_pipeline.sh
tools/hpc/: run_elie_slurm.sh
tools/pipelines/: run_mli_pipeline_conda.sh  run_sli_pipeline_conda.sh
training_notebooks/: Classifier_TensorFlow_Training_Notebook.ipynb  Label_Detection_Detecto_Training_Notebook.ipynb  Rotator_TensorFlow_Training_Notebook.ipynb
unit_tests/: __init__.py
unit_tests/evaluation_tests/: test_evaluate_IOU.py  test_evaluate_classifier.py  test_evaluate_text.py
unit_tests/label_postprocessing_test/: test_postprocessing.py
unit_tests/label_processing_tests/: detect_empty_labels_test.py  label_detection_test.py  label_rotation_test.py  tensorflow_classifier_test.py  test_consolidate_results.py  text_recognition_test.py  utils_test.py
unit_tests/testdata/: gt_pred_classiferHP.csv  iou_scores.csv
